Final Master Employee

--- a/Klinik.Web/Views/MappingMaster/OrgPrivilegeList.cshtml
+++ b/Klinik.Web/Views/MappingMaster/OrgPrivilegeList.cshtml
@@ -198,7 +198,7 @@
                         data: form_data,
                         async: "true",
                         success: function (result) {
-                            if (result.Status == "SUCCESS") {
+                            if (result.Status == true) {
                                 toastr.success(result.Message);
                             }
                             else {
