--- a/Klinik.Web/Views/MappingMaster/UserRoleList.cshtml
+++ b/Klinik.Web/Views/MappingMaster/UserRoleList.cshtml
@@ -27,7 +27,7 @@
     </header>
     <div class="panel-body">
         <div class="form-group">
-            <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.User</label>
+            <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Username</label>
             <div class="col-md-4">
                 @Html.TextBoxFor(x => x.UserName, new { @class = "form-control", @disabled = "Disabled" })
                 @Html.HiddenFor(x => x.UserID, new { @Id = "hdUserId" })
@@ -184,7 +184,7 @@
                         data: form_data,
                         async: "true",
                         success: function (result) {
-                            if (result.Status == "SUCCESS") {
+                            if (result.Status == true) {
                                 toastr.success(result.Message);
                             }
                             else {
