--- a/Klinik.Web/Views/Registration/Index.cshtml
+++ b/Klinik.Web/Views/Registration/Index.cshtml
@@ -29,7 +29,7 @@
                         <th>@Klinik.Resources.UIMessages.PatientName</th>
                         <th>@Klinik.Resources.UIMessages.PoliFrom</th>
                         <th>@Klinik.Resources.UIMessages.PoliTo</th>
-                        <th>@Klinik.Resources.UIMessages.Doctor</th>
+                        <th>@Klinik.Resources.UIMessages.DoctorOrParamedic</th>
                         <th>@Klinik.Resources.UIMessages.SortNumber</th>
                         <th>@Klinik.Resources.UIMessages.RegistrationType</th>
                         <th>@Klinik.Resources.UIMessages.ReffID</th>
