--- a/Klinik.Web/Views/MasterData/CreateOrEditDoctor.cshtml
+++ b/Klinik.Web/Views/MasterData/CreateOrEditDoctor.cshtml
@@ -34,6 +34,16 @@
             </div>
             <div class="form-group">
                 <label class="col-md-2 control-label" for="inputDefault">
+                    @Klinik.Resources.UIMessages.Type
+                </label>
+                <div class="col-md-4">
+                    @Html.RadioButtonFor(m => m.TypeID, "0", new { @class = "form-check-input", @id = "rdbDoctor", @Checked = "checked" }) @Klinik.Resources.UIMessages.Doctor
+                    &nbsp;
+                    @Html.RadioButtonFor(m => m.TypeID, "1", new { @class = "form-check-input", @id = "rdbParamedic" }) @Klinik.Resources.UIMessages.Paramedic
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-md-2 control-label" for="inputDefault">
                     @Klinik.Resources.UIMessages.DoctorType
                 </label>
                 <div class="col-md-4">
