Fixed Dashboard register link

--- a/Klinik.Web/Views/Registration/CreateOrEditRegistration.cshtml
+++ b/Klinik.Web/Views/Registration/CreateOrEditRegistration.cshtml
@@ -85,6 +85,7 @@
             <br />
             <footer class="panel-footer">
                 <button type="submit" class="btn btn-primary">@Klinik.Resources.UIMessages.Save</button>
+                <button type="button" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Home")'">@Klinik.Resources.UIMessages.BackToHome</button>
                 <button type="reset" id="btnreset" class="btn btn-default">@Klinik.Resources.UIMessages.Back</button>
             </footer>
         </form>
