--- a/Klinik.Web/Views/Home/Index.cshtml
+++ b/Klinik.Web/Views/Home/Index.cshtml
@@ -9,48 +9,44 @@
             <div class="plan most-popular">
                 <div class="plan-ribbon-wrapper"></div>
                 <h3>Poli Umum<span>15</span></h3>
-                <a class="btn btn-lg btn-primary" href="#">Register</a>
+                <a class="btn btn-lg btn-primary" href="/Registration/Umum">Register</a>
                 <ul>
                     <li><b>Jadwal</b> Jam 08:00 - 20:00</li>
                     <li><b>Dokter Jaga</b> Dr Ahmad / Dr Yuni</li>
                     <li><b>Total Antrian</b> 35</li>
-                    <li><b>Antrian Sekarang</b> 15</li>
                 </ul>
             </div>
         </div>
         <div class="col-lg-3 col-sm-6">
             <div class="plan most-popular">
                 <h3>Poli Gigi<span>6</span></h3>
-                <a class="btn btn-lg btn-primary" href="#">Register</a>
+                <a class="btn btn-lg btn-primary" href="/Registration/Gigi">Register</a>
                 <ul>
                     <li><b>Jadwal</b> Jam 08:00 - 20:00</li>
                     <li><b>Dokter Jaga</b> Dr Yulia / Dr AManda</li>
                     <li><b>Total Antrian</b> 15</li>
-                    <li><b>Antrian Sekarang</b> 6</li>
                 </ul>
             </div>
         </div>
         <div class="col-lg-3 col-sm-6">
             <div class="plan most-popular">
                 <h3>Poli Kulit<span>7</span></h3>
-                <a class="btn btn-lg btn-primary" href="#">Register</a>
+                <a class="btn btn-lg btn-primary" href="/Registration/Kulit">Register</a>
                 <ul>
                     <li><b>Jadwal</b> Jam 08:00 - 20:00</li>
                     <li><b>Dokter Jaga</b> Dr Budi / Dr Santoso</li>
                     <li><b>Total Antrian</b> 24</li>
-                    <li><b>Antrian Sekarang</b> 7</li>
                 </ul>
             </div>
         </div>
         <div class="col-lg-3 col-sm-6">
             <div class="plan most-popular">
                 <h3>Poli THT<span>4</span></h3>
-                <a class="btn btn-lg btn-primary" href="#">Register</a>
+                <a class="btn btn-lg btn-primary" href="/Registration/THT">Register</a>
                 <ul>
                     <li><b>Jadwal</b> Jam 08:00 - 20:00</li>
                     <li><b>Dokter Jaga</b> Dr Bambang / Dr Aulia</li>
                     <li><b>Total Antrian</b> 21</li>
-                    <li><b>Antrian Sekarang</b> 4</li>
                 </ul>
             </div>
         </div>
@@ -62,36 +58,33 @@
         <div class="col-lg-4">
             <div class="plan">
                 <h3>Farmasi<span>14</span></h3>
-                <a class="btn btn-lg btn-primary" href="#">Register</a>
+                <a class="btn btn-lg btn-primary" href="/Registration/Farmasi">Register</a>
                 <ul>
                     <li><b>Jadwal</b> Jam 08:00 - 20:00</li>
                     <li><b>Petugas Jaga</b> Bpk Sumadi</li>
                     <li><b>Total Antrian</b> 19</li>
-                    <li><b>Antrian Sekarang</b> 14</li>
                 </ul>
             </div>
         </div>
         <div class="col-lg-4">
             <div class="plan">
                 <h3>Laboratorium<span>12</span></h3>
-                <a class="btn btn-lg btn-primary" href="#">Register</a>
+                <a class="btn btn-lg btn-primary" href="/Registration/Lab">Register</a>
                 <ul>
                     <li><b>Jadwal</b> Jam 08:00 - 20:00</li>
                     <li><b>Petugas Jaga</b> Ibu Martini</li>
                     <li><b>Total Antrian</b> 22</li>
-                    <li><b>Antrian Sekarang</b> 12</li>
                 </ul>
             </div>
         </div>
         <div class="col-lg-4">
             <div class="plan">
                 <h3>Radiologi<span>13</span></h3>
-                <a class="btn btn-lg btn-primary" href="#">Register</a>
+                <a class="btn btn-lg btn-primary" href="/Registration/Radiologi">Register</a>
                 <ul>
                     <li><b>Jadwal</b> Jam 08:00 - 20:00</li>
                     <li><b>Petugas Jaga</b> Ibu Siti</li>
                     <li><b>Total Antrian</b> 35</li>
-                    <li><b>Antrian Sekarang</b> 13</li>
                 </ul>
             </div>
         </div>
