Generate queue number with poliCode+sortnumber in 3 digit format

--- a/Klinik.Web/Views/Registration/Index.cshtml
+++ b/Klinik.Web/Views/Registration/Index.cshtml
@@ -30,7 +30,7 @@
                         <th>@Klinik.Resources.UIMessages.PoliFrom</th>
                         <th>@Klinik.Resources.UIMessages.PoliTo</th>
                         <th>@Klinik.Resources.UIMessages.DoctorOrParamedic</th>
-                        <th>@Klinik.Resources.UIMessages.SortNumber</th>
+                        <th>@Klinik.Resources.UIMessages.QueueCode</th>
                         <th>@Klinik.Resources.UIMessages.RegistrationType</th>
                         <th>@Klinik.Resources.UIMessages.Remark</th>
                         <th>@Klinik.Resources.UIMessages.TransactionDate</th>
@@ -149,7 +149,7 @@
                 { "data": "PoliFromName", "name": "PoliFromName", "autoWidth": true },
                 { "data": "PoliToName", "name": "PoliToName", "autoWidth": true },
                 { "data": "DoctorStr", "name": "DoctorStr", "autoWidth": true },
-                { "data": "SortNumber", "name": "SortNumber", "autoWidth": true },
+                { "data": "SortNumberCode", "name": "SortNumberCode", "autoWidth": true },
                 { "data": "TypeStr", "name": "TypeStr", "autoWidth": true },
                 { "data": "Remark", "name": "Remark", "autoWidth": true },
                 { "data": "TransactionDateStr", "name": "TransactionDateStr", "autoWidth": true },
